# conda

./: .authors.yml  .binstar-setup  .binstar.yml  .checkignore  .cirrus.yml  .cla-signers  .codecov.yml  .condarc  .coveragerc  .devcontainer.json  .exempt-commits  .git-blame-ignore-revs  .gitattributes  .github-map  .gitignore  .gitpod.yml  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  .travis.yml  ADDONS.rst  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHANGELOG.txt  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EMBEDDED_WITNESS.md  HOW_WE_USE_GITHUB.md  IMPLEMENTATION_SUMMARY.md  INSTALL.rst  LICENSE  LICENSE.conda-forge.txt  LICENSE.txt  MANIFEST  (+57 more)
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  build_steps.sh  run_docker_build.sh
.ci_support/: README  linux_python2.7.yaml  linux_python3.6.yaml  linux_python3.7.yaml  osx_python2.7.yaml  osx_python3.6.yaml  osx_python3.7.yaml  win_python2.7.yaml  win_python3.6.yaml  win_python3.7.yaml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh  requirements-dev.txt
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  TEST_FAILURE_REPORT_TEMPLATE.md  WORKFLOW_FAILURE_REPORT_TEMPLATE.md  codecov.yml  condarc  condarc-conda-forge  condarc-conda-forge-py314  condarc-defaults  condarc-defaults-py314  copilot-instructions.md  dependabot.yml  disclaimer.txt  labels.yml  messages.yml  renovate.json
.helix/: metadata.json
_conda/: README.md
auxlib/: __init__.py  packaging.py  path.py
benchmarks/: conftest.py
ci/: Dockerfile  Dockerfile.win  build_docs.sh  full_tests.sh  integration_tests.sh  linux_tests.sh  unit_test.sh  unit_tests.sh
cmd/: activate  activate.bat  deactivate  deactivate.bat
conda/: README.txt  __init__.py  __main__.py  __version__.py  _vendor.py  _version.py  activate.py  anaconda.py  api.py  bundle.py  compat.py  conda-bash.sh  config.py  config_file.py  connection.py  connection_handling.py  console.py  constants.py  constraints.py  convert.py  deprecations.py  direct.py  egg_info.py  env_helper.py  environment.py  envs.py  exception_handler.py  exceptions.py  execute.py  exports.py  fetch.py  file_permissions.py  from_pypi.py  history.py  hook.py  initialize.py  install.py  instructions.py  launch.py  lock.py  (+35 more)
conda-env/: .binstar.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  runtests.sh  setup.py
conda.recipe/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.py  run_test.sh  setup.py
conda_env/: README.md  README.rst  __init__.py  __main__.py  _version.py  compat.py  env.py  exceptions.py  main_env.py  pip_util.py  yaml.py
dev/: appveyor-test.bat  docker.bashrc  pixi-setup.sh  requirements.txt  start  start.bat  start.fish  start.sh  start_docker  start_docker.bat  start_no_update  start_no_update_aws  test-requirements.txt
docs/: .travis.yml  Makefile  README.md  admin.rst  build_tutorials.rst  commands.rst  conda_names.pxm  conf.py  coursier  custom-channels.rst  download.rst  environment.yml  faq.rst  index.rst  installation.rst  mro.rst  py2or3.rst  reporter-system.dsl  requirements.txt  scrape_help.py  signed-packages.rst  test-drive.rst  troubleshooting.rst
durations/: Linux.json  Windows.json  macOS.json
news/: #14287-visual-tweaks  10018-add-environment-variable-expansion-for-repository-url  10351-conda-run-TERM-signaling  10351-conda-run-forward-signals  10567-post-create-hooks  10665-add-env-variable  10764-env-list-star  10803-virtual-package-run-constrains  10911-yaml-multiple-pip-entries  10992-310-testing  11059-deep-dive-docs  11200-version-default-matchspec-conda-build-form  11290-vendoring  11300-improve-cli-warning-conda-update  11309-remove-conda.cli.activate  11312-docs-update  11322-remove-conda.compat  11323-remove-conda.install  11325-remove-conda.cli.main_help  11333-replace-toolz-dependency-with-cytoolz  11334-replace-urllib3-with-urllib  11336-conda-compare-docs  11349-remove-unused-conda.auxlib  11351-reorg-conda.cli.main_clean  11360-reorg-tests  11364-legacy-code  11373-replace-urllib3-with-urllib  11374-check-conda-exe-before-use  11381-duplicate-section  11385-conda-clean  11386-conda-clean  11387-conda-clean-logfiles  11393-bump-cpuinfo-version  11398-replace-conda.auxlib.collection.frozendict  11400-codecov  11410-unset-prompt-var-csh  11413-add-user-agent-solver  11416-escape_channel_url  11422-conda-run-live-stream-alias  11424-remove-unused-exceptions  (+1005 more)
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
requirements/: benchmarks.txt  memray.txt  tests.txt  truststore.txt
run-results/: combine_durations.py
scripts/: generate-witness-policy.sh
shell/: .de.activate.clauses  README.md  activate  activate.bat  activate.csh  activate.ps1  activate.sh  activate.xsh  conda.fish  conda.sh  conda.xsh  deactivate  deactivate.bat  deactivate.csh  deactivate.ps1  deactivate.sh  deactivate.xsh  envvar_cleanup.bash  envvar_cleanup.bat  envvar_cleanup.sh  test_whichshell  whichshell.awk  whichshell_args.bash  whichshell_ps.bash
tests/: .gitignore  Dockerfile  __init__.py  adhoc.crt  adhoc.key  adhoc_cert.py  bootstrap_list  build-index2-json.py  build-index4-json.py  build-index5-json.py  cases.py  cli.py  combine_durations.py  conda-lock-python-3.11.yml  conda-lock-python-3.12.yml  conda-lock-python-3.13.yml  conda-lock-python310.yml  conda-lock-python311.yml  conda-lock-python312.yml  conda-lock-python313.yml  condarc  conftest.py  decorators.py  environment.yml  execute.py  fixtures_jlap.py  fixtures_package_server.py  generate_locks_by_python.py  generate_locks_by_python.sh  helpers.py  http_test_server.py  index.json  index2.json  index3.json  index4.json  index5.json  integration.bash  integration_tests.sh  mk_index.py  path_test.py  (+79 more)
tests/test-recipes/noarch_entry_points/src/: noarch_entry_points.py  pyproject.toml
tests_no_ssl/: test_no_ssl.py
utils/: appveyor-downloader.ps1  appveyor-install.bat  appveyor-install.ps1  cla.py  (+32 more)
(+2424 files in other folders)
