[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >=1.12.2",
  "hatch-vcs >=0.2.0",
]

[project]
authors = [{name = "Anaconda, Inc.", email = "conda@continuum.io"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "archspec >=0.2.3",
  "boltons >=23.0.0",
  "charset-normalizer",
  # Disabled due to conda-libmamba-solver not being available on PyPI
  # "conda-libmamba-solver >=25.4.0",
  "conda-package-handling >=2.2.0",
  "distro >=1.5.0",
  "frozendict >=2.4.2",
  "jsonpatch >=1.32",
  "menuinst >=2",
  "packaging >=23.0",
  "platformdirs >=3.10.0",
  "pluggy >=1.0.0",
  "pycosat >=0.6.3",
  "requests >=2.28.0,<3",
  "ruamel.yaml >=0.11.14,<0.19",
  "setuptools >=60.0.0",
  "tqdm >=4",
  "truststore >=0.8.0; python_version>='3.10'",
  "zstandard >=0.15",
]
description = "OS-agnostic, system-level binary package manager."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "conda"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
conda = "conda.cli.main_pip:main"

[project.urls]
changelog = "https://github.com/conda/conda/blob/main/CHANGELOG.md"
documentation = "https://docs.conda.io/projects/conda/en/stable/"
repository = "https://github.com/conda/conda"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pragma: py$PYTHON_MAJOR_VERSION no cover",
  "pragma: $TEST_PLATFORM no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "def __repr__",
  '\s*\.\.\.$',
  "if TYPE_CHECKING:",  # ignoring type checking imports
]
omit = [
  "*/site-packages/*",
  '*\site-packages\*',
  "conda/_vendor.py",
  "conda/console.py",
  "conda/cli/activate.py",
  "conda/cli/main_package.py",
  "conda/exports.py",
  "conda/gateways/connection/adapters/ftp.py",
  "conda/gateways/connection/adapters/s3.py",
  "conda_env/*",
  "tests/*",
  "utils/*",
]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.run]
# store relative paths in coverage information
relative_files = true

[tool.hatch.build]
include = ["conda", "conda_env"]

[tool.hatch.build.hooks.vcs]
version-file = "conda/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "dirty-tag"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
# disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# TODO(PY312): explicit-override
enable_error_code = [
  "deprecated",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]
files = "conda/"
follow_imports_for_stubs = true
follow_untyped_imports = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_column_numbers = true
show_error_code_links = true
show_error_codes = true
strict_bytes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "--color=auto",
  # "--cov=conda",   # passed in test runner scripts instead (avoid debugger)
  "--cov-append",
  "--cov-branch",
  "--cov-report=term",  # print summary table to screen
  "--cov-report=xml",  # for codecov/codecov-action upload
  "--durations=16",
  "--junitxml=test-report.xml",
  "--splitting-algorithm=least_duration",
  "--store-durations",  # pytest-split, update duration cache
  "--clean-durations",  # pytest-split, remove duration for tests no longer present
  "--strict-markers",
  "--tb=native",
  "-vv",
]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE",
  "ELLIPSIS",
]
filterwarnings = [
  # elevate all deprecation warnings to errors
  "error::PendingDeprecationWarning",
  "error::DeprecationWarning",
  "error::FutureWarning",
  # ##### external library deprecations that we cannot fix in the conda source code
  # - conda_content_trust.plugin uses old CondaSubcommand import path; remove when conda-content-trust plugin is updated
  "ignore:conda.plugins.CondaSubcommand:PendingDeprecationWarning:conda_content_trust.plugin",
  # ##### internal conda deprecations that need some special handling right now
  # - ignore this until 26.3 due to a circular deprecation warning
  "ignore:conda.core.link.PrefixActions:DeprecationWarning:conda.core.link",
]
markers = [
  "integration: integration tests that usually require an internet connect",
  "slow: slow running tests",
  "benchmark: benchmark tests",
  "memray: memory use tests",
]
minversion = "3.0"
norecursedirs = [
  "tests/data/*",
  "tests/integration/*",
  "tests/plugins/data/*",
  "docs",
  ".git",
]
pythonpath = [
  # faking a test-plugin to test ImportError handling
  "tests/plugins/data/test-plugin",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  "conda/auxlib",
  "tests/data/conda_format_repo",
  "tests/data/env_metadata",
]
show-fixes = true

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
ignore = [
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "E402",  # module level import not at top of file
  "E501",  # line too long
  "E722",  # do not use bare 'except'
  "E731",  # do not assign a lambda expression, use a def
  "UP031",  # do not fix printf-style string formatting
]
pydocstyle = {convention = "pep257"}
# see https://docs.astral.sh/ruff/rules/
select = [
  "B012",  # bugbear
  "D1",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "FA",  # flake8-future-annotations
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # Unused noqa directive
  "S101",  # forbid assert
  "T10",  # flake8-debugger
  "TC",  # flake8-type-checking
  "TID251",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]

[tool.ruff.lint.extend-per-file-ignores]
"conda/testing/*" = [
  "S101",  # forbid assert
]
"docs/*" = [
  "D1",  # pydocstyle
]
"tests/*" = [
  "D1",  # pydocstyle
  "S101",  # forbid assert
  "TID251",  # flake8-tidy-imports
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"json".msg = "Use `conda.common.serialize.json` instead."
